objects/SLCA2__CA_WebCalendar__c.object
<CustomObject>
    <fields>
        <fullName>SLCA2__URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__color__c</fullName>
        <label>color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__friendlyName__c</fullName>
        <label>friendlyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CA_WebCalendar</label>
    <nameField>
        <label>CA_WebCalendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CA_WebCalendars</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>